add dbcontext to CleanArchitecure.Data , Update mvc dbcontex , migraiton

--- a/CleanArchitecture/CleanArchitecture.Mvc/appsettings.json
+++ b/CleanArchitecture/CleanArchitecture.Mvc/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "UniversityIdentityDbContext": "Server=.;Database=UniversityIdentityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UniversityIdentityDbContext": "Server=.;Database=UniversityIdentityDb;User Id=sa;Password=Sudo@123;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDbContext": "Server=.;Database=UniversityDb;User Id=sa;Password=Sudo@123;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
