--- a/CleanArchitecture/CleanArchitecture.Mvc/CleanArchitecture.Mvc.csproj
+++ b/CleanArchitecture/CleanArchitecture.Mvc/CleanArchitecture.Mvc.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArchitecture.Data\CleanArchitecture.Data.csproj" />
+    <ProjectReference Include="..\CleanArchitecture.Infra.IoC\CleanArchitecture.Infra.IoC.csproj" />
   </ItemGroup>
 
 </Project>
