--- a/CleanArchitecture/CleanArchitecture.Domain.Core/CleanArchitecture.Domain.Core.csproj
+++ b/CleanArchitecture/CleanArchitecture.Domain.Core/CleanArchitecture.Domain.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CleanArchitecture.Domain.Core\CleanArchitecture.Domain.Core.csproj" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
