--- a/CleanArchitecture/CleanArchitecture.Api/appsettings.json
+++ b/CleanArchitecture/CleanArchitecture.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "UniversityIdentityDbContext": "Server=.;Database=UniversityIdentityDb;User Id=sa;Password=Admin@123;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDbContext": "Server=.;Database=UniversityDb;User Id=sa;Password=Admin@123;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
